[#9] Implement endpoint for modified attributions
