# openapi.yaml
@@ -87,6 +87,63 @@ info:
   title: attribution-generator-api
   version: 0.1.0
 paths:
+  '/attribution/{languageCode}/{file}/{typeOfUse}/modified/{modification}/{modificationAuthor}/{licenseId}':
+    get:
+      description: Generate attribution hints for the given file if that file was modified.
+      operationId: attribution.show
+      parameters:
+        - in: path
+          name: languageCode
+          required: true
+          type: string
+        - in: path
+          name: file
+          required: true
+          type: string
+        - in: path
+          name: typeOfUse
+          required: true
+          type: string
+        - in: path
+          name: modification
+          required: true
+          type: string
+        - in: path
+          name: modificationAuthor
+          required: true
+          type: string
+        - in: path
+          name: licenseId
+          required: true
+          type: string
+      produces:
+        - application/json
+      responses:
+        '400':
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/BadRequestErrorResponse'
+        '422':
+          description: Unprocessable Entity
+          schema:
+            $ref: '#/definitions/UnprocessableEntityErrorResponse'
+        '500':
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/InternalServerError'
+        '503':
+          description: Service Unavailable
+          schema:
+            $ref: '#/definitions/ServiceUnavailableErrorResponse'
+        default:
+          description: ''
+          schema:
+            $ref: '#/definitions/AttributionShowResponse'
+      security:
+        - default: []
+      summary: Generate attribution for a modifile work
+      tags:
+        - attribution
   '/attribution/{languageCode}/{file}/{typeOfUse}/unmodified':
     get:
       description: Generate attribution hints for the given file.
